resolves #716: new report: invoicing

--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -31,6 +31,9 @@ DAliquots.EDITOR = AliquotsByStudyClinicDateEditor
 FTAReport.NAME = FTA Aliquots by First Visit
 FTAReport.DESCRIPTION = Retrieves one FTA card for a patient with their first patient visit after the specified date, for a given study. 
 FTAReport.EDITOR = FTAReportEditor
+InvoicingReport.NAME = Invoicing Report
+InvoicingReport.DESCRIPTION = Displays the total patient visits per study and per clinic, and lists the total aliquots for each sample type collected.
+InvoicingReport.EDITOR = InvoicingReportEditor
 FvLPatientVisits.NAME = Clinic Activity by Study
 FvLPatientVisits.DESCRIPTION =Reports the date of the first and last patient visit for each clinic in each study.
 FvLPatientVisits.EDITOR = FvLPatientVisitsEditor
