when building SDK, build file does not connect to caDSR web site anymore

--- a/sdk_conf/deploy.properties
+++ b/sdk_conf/deploy.properties
@@ -288,7 +288,7 @@ CLM_DB_DRIVER=${DB_DRIVER}
 ##################################################################################
 VALIDATE_LOGICAL_MODEL=true
 VALIDATE_MODEL_MAPPING=true
-VALIDATE_GME_TAGS=true
+VALIDATE_GME_TAGS=false
 GENERATE_HIBERNATE_MAPPING=true
 GENERATE_BEANS=true
 GENERATE_CASTOR_MAPPING=true
@@ -296,7 +296,7 @@ GENERATE_XSD=true
 GENERATE_XSD_WITH_GME_TAGS=false
 GENERATE_XSD_WITH_PERMISSIBLE_VALUES=false
 GENERATE_WSDD=true
-GENERATE_HIBERNATE_VALIDATOR=true
+GENERATE_HIBERNATE_VALIDATOR=false
 ##################################################################################
 #  ADVANCED PROPERTIES
 #
