updating tests after model changes

--- a/sdk_conf/deploy.properties
+++ b/sdk_conf/deploy.properties
@@ -292,11 +292,11 @@ VALIDATE_GME_TAGS=true
 GENERATE_HIBERNATE_MAPPING=true
 GENERATE_BEANS=true
 GENERATE_CASTOR_MAPPING=true
-GENERATE_XSD=true
+GENERATE_XSD=false
 GENERATE_XSD_WITH_GME_TAGS=false
 GENERATE_XSD_WITH_PERMISSIBLE_VALUES=false
 GENERATE_WSDD=true
-GENERATE_HIBERNATE_VALIDATOR=true
+GENERATE_HIBERNATE_VALIDATOR=false
 ##################################################################################
 #  ADVANCED PROPERTIES
 #
