--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -1,5 +1,6 @@
 bin.includes = META-INF/,\
                lib/,\
-               bin/
+               bin/,\
+               conf/
 source.. = src/
 src.includes = conf/
