--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -1,6 +1,7 @@
 bin.includes = META-INF/,\
                lib/,\
-               bin/,\
-               conf/
-source.. = src/
-src.includes = conf/
+               bin/
+source.. = src/,\
+           conf/
+jars.compile.order = .
+output.. = bin/
