fixed tests that were failing

--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -3,4 +3,5 @@ bin.includes = META-INF/,\
                bin/,\
                conf/
 source.. = src/
-src.includes = conf/
+src.includes = conf/,\
+               src/
