resolves #745: reports are now updated

--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -22,7 +22,7 @@ CAliquots.EDITOR= AliquotsByStudyClinicEditor
 ContainerCapacity.NAME = Container Capacity
 ContainerCapacity.DESCRIPTION = Displays the total aliquot capacity for each container and the total currently in use
 ContainerCapacity.EDITOR = ContainerCapacityEditor
-ContainerEmptyLocations.NAME = Available Pallet Locations by Container
+ContainerEmptyLocations.NAME = Available Locations by Container
 ContainerEmptyLocations.DESCRIPTION = Lists the available aliquot positions of a given container.
 ContainerEmptyLocations.EDITOR = ContainerEmptyLocationsEditor
 DAliquots.NAME = Aliquots per Study per Clinic by Date
