--- a/build.xml
+++ b/build.xml
@@ -342,7 +342,7 @@
           description="generates the database schema for the caCORE SDK data model">
     <ant dir="${schema.dir}" target="schemaexport" inheritRefs="false" />
   </target>
-  <target name="dbcreate" depends="strfields" description="creates the default tables">
+  <target name="dbcreate-add-tables" depends="strfields">
     <sql driver="${DB_DRIVER}"
          url="${DB_CONNECTION_URL}"
          userid="${DB_USERNAME}" password="${DB_PASSWORD}">
@@ -375,6 +375,21 @@
         </fileset>
       </classpath>
     </sql>
+  </target>
+  <target name="dbcreate-add-testuser" if="debug">
+    <sql driver="${DB_DRIVER}"
+         url="${DB_CONNECTION_URL}"
+         userid="${DB_USERNAME}" password="${DB_PASSWORD}">
+      <transaction src="${secu-log.dir}/addTestUser.sql" />
+      <classpath>
+        <fileset dir="${cacore.sdk.dir}/system/lib">
+          <include name="*.jar" />
+        </fileset>
+      </classpath>
+    </sql>
+  </target>
+  <target name="dbcreate" depends="dbcreate-add-tables,dbcreate-add-testuser"
+         description="creates the default tables">
   </target>
   <target name="dbbackup"
           description="makes a copy of the current biobank2 database">
