site-notification relation is now bidirectional and admethod is there

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -92,7 +92,7 @@
       <perspective
             class="edu.ualberta.med.biobank.rcp.ShipmentAdministrationPerspective"
             id="edu.ualberta.med.biobank.perspective.shipments"
-            icon="icons/shipmentPerspective.png"
+            icon="icons/clinicShipmentPerspective.png"
             name="Shipment View">
       </perspective>
       <perspective
@@ -286,6 +286,10 @@
       <command
             id="edu.ualberta.med.biobank.commands.changePassword"
             name="Change Password">
+      </command>
+      <command
+            id="edu.ualberta.med.biobank.commands.dispatchShipmentAdmin"
+            name="Dispatch Shipment administration">
       </command>
    </extension>
    <extension
@@ -1170,7 +1174,7 @@
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.shipmentAdmin"
-                  icon="icons/shipmentPerspective.png"
+                  icon="icons/clinicShipmentPerspective.png"
                   label="Shipment View"
                   style="push">
             </command>
@@ -1310,8 +1314,14 @@
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.shipmentAdmin"
-                  icon="icons/shipmentPerspective.png"
+                  icon="icons/clinicShipmentPerspective.png"
                   label="Shipment View"
+                  style="push">
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.dispatchShipmentAdmin"
+                  icon="icons/dispatchShipmentPerspective.png"
+                  label="Dispatch Shipment View"
                   style="push">
             </command>
             <command
@@ -2358,7 +2368,7 @@
       </view>
       <view
             class="edu.ualberta.med.biobank.views.ShipmentAdministrationView"
-            icon="icons/shipmentPerspective.png"
+            icon="icons/clinicShipmentPerspective.png"
             id="edu.ualberta.med.biobank.views.ShipmentAdminView"
             name="Shipment Administration"
             restorable="true">
