--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -96,6 +96,12 @@
             name="Shipment View">
       </perspective>
       <perspective
+            class="edu.ualberta.med.biobank.rcp.DispatchShipmentAdministrationPerspective"
+            icon="icons/dispatchShipmentPerspective.png"
+            id="edu.ualberta.med.biobank.perspective.dispatchShipments"
+            name="Dispatch View">
+      </perspective>
+      <perspective
             class="edu.ualberta.med.biobank.rcp.LoggingPerspective"
             icon="icons/table_row_delete.png"
             id="edu.ualberta.med.biobank.perspective.logging"
@@ -984,6 +990,27 @@
             </and>
          </activeWhen>
       </handler>
+      <handler
+            class="edu.ualberta.med.biobank.handlers.DispatchShipmentAdministrationHandler"
+            commandId="edu.ualberta.med.biobank.commands.dispatchShipmentAdmin">
+         <enabledWhen>
+            <and>
+               <not>
+                  <or>
+                     <reference
+                           definitionId="biobank2.dispatchPerspectiveSelected">
+                     </reference>
+                     <reference
+                           definitionId="biobank2.sampleManagementPerspectiveSelected">
+                     </reference>
+                  </or>
+               </not>
+               <reference
+                     definitionId="biobank2.loggedIn">
+               </reference>
+            </and>
+         </enabledWhen>
+      </handler>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -1771,6 +1798,21 @@
                visible="true">
          </view>
       </perspectiveExtension>
+      <perspectiveExtension
+            targetID="edu.ualberta.med.biobank.perspective.dispatchShipments">
+         <view
+               closeable="false"
+               id="edu.ualberta.med.biobank.views.DispatchShipmentAdministrationView"
+               minimized="false"
+               moveable="false"
+               ratio="0.20"
+               relationship="left"
+               relative="org.eclipse.ui.editorss"
+               showTitle="false"
+               standalone="false"
+               visible="true">
+         </view>
+      </perspectiveExtension>
       </extension>
    <extension
          point="org.eclipse.ui.editors">
@@ -2374,6 +2416,13 @@
             restorable="true">
       </view>
       <view
+            class="edu.ualberta.med.biobank.views.DispatchShipmentAdministrationView"
+            icon="icons/dispatchShipmentPerspective.png"
+            id="edu.ualberta.med.biobank.views.DispatchShipmentAdministrationView"
+            name="Dispatch Administration"
+            restorable="true">
+      </view>
+      <view
             class="edu.ualberta.med.biobank.views.SearchView"
             icon="icons/search.png"
             id="edu.ualberta.med.biobank.views.SearchView"
@@ -2535,6 +2584,15 @@
                variable="edu.ualberta.med.biobank.sourceprovider.confirmState">
             <equals
                   value="confirmEnabled">
+            </equals>
+         </with>
+      </definition>
+      <definition
+            id="biobank2.dispatchPerspectiveSelected">
+         <with
+               variable="activeWorkbenchWindow.activePerspective">
+            <equals
+                  value="edu.ualberta.med.biobank.perspective.dispatchShipments">
             </equals>
          </with>
       </definition>
