--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1022,6 +1022,7 @@
                label="Administration">
                <command
                      commandId="edu.ualberta.med.biobank.commands.siteAdd"
+                     icon="icons/sites_add.png"
                      id="edu.ualberta.med.biobank.menu.siteAdd"
                      label="Add Repository Site"
                      style="push">
