Renamed ShipmentAdapter to ClinicShipmentAdapter. Fixed upgrade script after removing ShipmentContainer.

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -633,7 +633,7 @@
                         ifEmpty="false"
                         operator="or">
                      <instanceof
-                           value="edu.ualberta.med.biobank.treeview.ShipmentAdapter">
+                           value="edu.ualberta.med.biobank.treeview.ClinicShipmentAdapter">
                      </instanceof>
                   </iterate>
                </with>
