--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -92,13 +92,13 @@
       <perspective
             class="edu.ualberta.med.biobank.rcp.ShipmentAdministrationPerspective"
             id="edu.ualberta.med.biobank.perspective.shipments"
-            icon="icons/clinicShipmentPerspective.png"
-            name="Shipment View">
+            icon="icons/clinicShipment.png"
+            name="Clinic Shipment View">
       </perspective>
       <perspective
             class="edu.ualberta.med.biobank.rcp.DispatchShipmentAdministrationPerspective"
             id="edu.ualberta.med.biobank.perspective.dispatchShipments"
-            icon="icons/dispatchShipmentPerspective.png"
+            icon="icons/dispatchShipment.png"
             name="Dispatch View">
       </perspective>
       <perspective
@@ -211,11 +211,11 @@
       </command>
        <command
             id="edu.ualberta.med.biobank.commands.shipments.shipmentAdd"
-            name="Add shipment">
+            name="Add clinic shipment">
       </command>
        <command
             id="edu.ualberta.med.biobank.commands.shipments.shipmentDelete"
-            name="Delete shipment">
+            name="Delete clinic shipment">
       </command>
       <command
             id="edu.ualberta.med.biobank.commands.patients.patientAdd"
@@ -239,7 +239,7 @@
       </command>
       <command
             id="edu.ualberta.med.biobank.commands.shipmentAdmin"
-            name="Shipment administration">
+            name="Clinic Shipment administration">
       </command>
       <command
             id="edu.ualberta.med.biobank.commands.sessionReload"
@@ -1118,8 +1118,8 @@
                label="Shipments">
             <command
                   commandId="edu.ualberta.med.biobank.commands.shipments.shipmentAdd"
-                  icon="icons/shipment_add.png"
-                  label="Add Shipment"
+                  icon="icons/clinicShipment_add.png"
+                  label="Add Clinic Shipment"
                   style="push">
             </command>
          </menu>
@@ -1202,8 +1202,8 @@
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.shipmentAdmin"
-                  icon="icons/clinicShipmentPerspective.png"
-                  label="Shipment View"
+                  icon="icons/clinicShipment.png"
+                  label="Clinic Shipment View"
                   style="push">
             </command>
             <command
@@ -1342,13 +1342,13 @@
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.shipmentAdmin"
-                  icon="icons/clinicShipmentPerspective.png"
-                  label="Shipment View"
+                  icon="icons/clinicShipment.png"
+                  label="Clinic Shipment View"
                   style="push">
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.dispatchShipmentAdmin"
-                  icon="icons/dispatchShipmentPerspective.png"
+                  icon="icons/dispatchShipment.png"
                   label="Dispatch Shipment View"
                   style="push">
             </command>
@@ -1571,8 +1571,8 @@
                id="edu.ualberta.med.biobank.views.ShipmentAdminView">
             <command
                   commandId="edu.ualberta.med.biobank.commands.shipments.shipmentAdd"
-                  icon="icons/shipment_add.png"
-                  label="Add Shipment"
+                  icon="icons/clinicShipment_add.png"
+                  label="Add Clinic Shipment"
                   style="push">
                <visibleWhen
                      checkEnabled="false">
@@ -1583,7 +1583,7 @@
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.shipments.shipmentDelete"
-                  icon="icons/shipment_delete.png"
+                  icon="icons/clinicShipment_delete.png"
                   label="Delete Shipment"
                   style="push">
                <visibleWhen
@@ -1987,28 +1987,28 @@
       <editor
             class="edu.ualberta.med.biobank.forms.ClinicShipmentEntryForm"
             default="false"
-            icon="icons/shipment.png"
+            icon="icons/clinicShipment.png"
             id="edu.ualberta.med.biobank.forms.ClinicShipmentEntryForm"
             name="Clinic Shipment Entry">
       </editor>
       <editor
             class="edu.ualberta.med.biobank.forms.ClinicShipmentViewForm"
-            default="false"
-            icon="icons/shipment.png"
+            default="false" 
+            icon="icons/clinicShipment.png"
             id="edu.ualberta.med.biobank.forms.ClinicShipmentViewForm"
             name="Clinic Shipment View">
       </editor>
       <editor
             class="edu.ualberta.med.biobank.forms.DispatchShipmentSendingEntryForm"
             default="false"
-            icon="icons/shipment.png"
+            icon="icons/clinicShipment.png"
             id="edu.ualberta.med.biobank.forms.DispatchShipmentEntryForm"
             name="Dispatch Shipment Entry">
       </editor>
       <editor
             class="edu.ualberta.med.biobank.forms.DispatchShipmentViewForm"
             default="false"
-            icon="icons/shipment.png"
+            icon="icons/clinicShipment.png"
             id="edu.ualberta.med.biobank.forms.DispatchShipmentViewForm"
             name="Dispatch Shipment View">
       </editor>
@@ -2227,21 +2227,21 @@
 <editor
       class="edu.ualberta.med.biobank.forms.DispatchShipmentViewForm"
       default="false"
-      icon="icons/shipment.png"
+      icon="icons/dispatchShipment.png"
       id="edu.ualberta.med.biobank.forms.DispatchShipmentViewForm"
       name="Dispatch Shipment View">
 </editor>
 <editor
       class="edu.ualberta.med.biobank.forms.DispatchShipmentReceivingEntryForm"
       default="false"
-      icon="icons/shipment.png"
+      icon="icons/dispatchShipment.png"
       id="edu.ualberta.med.biobank.forms.DispatchShipmentReceivingEntryForm"
       name="Dispatch Shipment Receiver Entry">
 </editor>
 <editor
       class="edu.ualberta.med.biobank.forms.DispatchShipmentSendingEntryForm"
       default="false"
-      icon="icons/shipment.png"
+      icon="icons/dispatchShipment.png"
       id="edu.ualberta.med.biobank.forms.DispatchShipmentSendingEntryForm"
       name="Dispatch Shipment Sending Entry">
 </editor>
@@ -2469,14 +2469,14 @@
       </view>
       <view
             class="edu.ualberta.med.biobank.views.ShipmentAdministrationView"
-            icon="icons/clinicShipmentPerspective.png"
+            icon="icons/clinicShipment.png"
             id="edu.ualberta.med.biobank.views.ShipmentAdminView"
-            name="Shipment Administration"
+            name="Clinic Shipment Administration"
             restorable="true">
       </view>
       <view
             class="edu.ualberta.med.biobank.views.DispatchShipmentAdministrationView"
-            icon="icons/dispatchShipmentPerspective.png"
+            icon="icons/dispatchShipment.png"
             id="edu.ualberta.med.biobank.views.DispatchShipmentAdministrationView"
             name="Dispatch Administration"
             restorable="true">
