--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -297,6 +297,10 @@
             id="edu.ualberta.med.biobank.commands.dispatchShipmentAdmin"
             name="Dispatch Shipment Administration">
       </command>
+       <command
+            id="edu.ualberta.med.biobank.commands.dispatch.shipmentAdd"
+            name="Add dispatch shipment">
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.handlers">
@@ -1011,6 +1015,25 @@
             </and>
          </enabledWhen>
       </handler>
+      <handler
+            class="edu.ualberta.med.biobank.handlers.DispatchShipmentAddHandler"
+            commandId="edu.ualberta.med.biobank.commands.dispatch.shipmentAdd">
+         <activeWhen>
+            <and>
+              <reference
+                    definitionId="biobank2.dispatchShipmentsPerspectiveSelected">
+              </reference>
+              <reference
+                    definitionId="biobank2.siteSelected">
+              </reference>
+            </and>
+         </activeWhen>
+         <enabledWhen>
+            <reference
+                  definitionId="biobank2.dispatchShipmentsPerspectiveSelected">
+            </reference>
+         </enabledWhen>
+      </handler>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -1115,11 +1138,21 @@
          </menu>
          <menu
                id="edu.ualberta.med.biobank.menu.shipments"
-               label="Shipments">
+               label="Clinic Shipments">
             <command
                   commandId="edu.ualberta.med.biobank.commands.shipments.shipmentAdd"
                   icon="icons/clinicShipment_add.png"
                   label="Add Clinic Shipment"
+                  style="push">
+            </command>
+         </menu>
+         <menu
+               id="edu.ualberta.med.biobank.menu.dispatch"
+               label="Dispatch Shipments">
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.dispatch.shipmentAdd"
+                  icon="icons/dispatchShipment_add.png"
+                  label="Add Dispatch Shipment"
                   style="push">
             </command>
          </menu>
@@ -1610,6 +1643,21 @@
                      checkEnabled="false">
                   <reference
                         definitionId="biobank2.shipmentsPerspectiveSelected">
+                  </reference>
+               </visibleWhen>
+            </command>
+         </toolbar>
+         <toolbar
+               id="edu.ualberta.med.biobank.views.DispatchShipmentAdministrationView">
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.dispatch.shipmentAdd"
+                  icon="icons/dispatchShipment_add.png"
+                  label="Add Dispatch Shipment"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.dispatchShipmentsPerspectiveSelected">
                   </reference>
                </visibleWhen>
             </command>
@@ -2532,6 +2580,15 @@
                variable="activeWorkbenchWindow.activePerspective">
             <equals
                   value="edu.ualberta.med.biobank.perspective.shipments">
+            </equals>
+         </with>
+      </definition>
+      <definition
+            id="biobank2.dispatchShipmentsPerspectiveSelected">
+         <with
+               variable="activeWorkbenchWindow.activePerspective">
+            <equals
+                  value="edu.ualberta.med.biobank.perspective.dispatchShipments">
             </equals>
          </with>
       </definition>
