slight changes for patient merging

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -227,7 +227,7 @@
       </command>
        <command
              id="edu.ualberta.med.biobank.commands.patients.patientMerge"
-             name="Merge patient">
+             name="Merge patients">
        </command>
       <command
             id="edu.ualberta.med.biobank.commands.patients.patientVisitAdd"
@@ -1164,7 +1164,14 @@
                   icon="icons/patient_add.png"
                   label="Add Patient"
                   style="push">
+            </command>      
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.patients.patientMerge"
+                  icon="icons/patient_merge.png"
+                  label="Merge Patients"
+                  style="push">
             </command>
+            
             <command
                   commandId="edu.ualberta.med.biobank.commands.patients.patientDelete"
                   icon="icons/patient_delete.png"
@@ -1490,6 +1497,12 @@
                </visibleWhen>
             </command>
             <command
+                  commandId="edu.ualberta.med.biobank.commands.patients.patientMerge"
+                  icon="icons/patient_merge.png"
+                  label="Merge Patients"
+                  style="push">
+            </command>
+            <command
                   commandId="edu.ualberta.med.biobank.commands.patients.patientDelete"
                   icon="icons/patient_delete.png"
                   label="Delete Patient"
@@ -1500,12 +1513,6 @@
                         definitionId="biobank2.patientsPerspectiveSelected">
                   </reference>
                </visibleWhen>
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.patients.patientMerge"
-                  icon="icons/merge.png"
-                  label="Merge Patient"
-                  style="push">
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.patients.patientVisitAdd"
