aliquot request by CSV file report now uses SuperCSV

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -12,5 +12,7 @@ bin.includes = META-INF/,\
                about.mappings,\
                lib/DynamicJasper-3.0.14.jar,\
                lib/jdt-compiler-3.1.1.jar,\
-               lib/mail.jar
+               lib/mail.jar,\
+               lib/SuperCSV-1.52.jar,\
+               lib/spiffy-all-0.05.jar
 Bundle-NativeCode: scanlib.dll
