--- a/eclipse_ws/biobank2.tools/.classpath
+++ b/eclipse_ws/biobank2.tools/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.7-bin.jar"/>
 	<classpathentry kind="lib" path="/biobank.common/lib/client/log4j-1.2.14.jar"/>
 	<classpathentry kind="lib" path="lib/SuperCSV-1.52.jar"/>
+	<classpathentry kind="lib" path="lib/spiffy-all-0.05.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
