--- a/eclipse_ws/biobank2/.classpath
+++ b/eclipse_ws/biobank2/.classpath
@@ -21,5 +21,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/SuperCSV-1.52.jar"/>
+	<classpathentry kind="lib" path="lib/spiffy-all-0.05.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
