resolves #750: switched to a different JavaMail API implementation and append client version number to email.
Added necessary jars to the project and jars folder and updated build.xml (removed old Sun mail.jar JavaMail implementation).

--- a/build.xml
+++ b/build.xml
@@ -40,7 +40,7 @@
   <property name="req.jars.dir" value="jars" />
   <property name="lib-sources.dir" value="lib-sources" />
   <property name="biobank2.jar.files"
-            value="gluegen.jar,jdom.jar,commons-beanutils-1.8.0.jar, commons-digester-1.7.jar, iText-2.1.0.jar, jasperreports-3.7.0.jar,DynamicJasper-3.0.14.jar,jdt-compiler-3.1.1.jar,mail.jar,spiffy-all-0.05.jar,SuperCSV-1.52.jar" />
+            value="gluegen.jar,jdom.jar,commons-beanutils-1.8.0.jar, commons-digester-1.7.jar, iText-2.1.0.jar, jasperreports-3.7.0.jar,DynamicJasper-3.0.14.jar,jdt-compiler-3.1.1.jar,gnumail.jar,gnumail-providers.jar,inetlib.jar,activation.jar,spiffy-all-0.05.jar,SuperCSV-1.52.jar" />
   <property name="biobank.common.jar.files" value="xpp3-1.1.3.4.C.jar, commons-lang-2.4.jar,xstream-1.3.1.jar" />
   <property name="biobank.importer.jar.files"
             value="mysql-connector-java-5.1.7-bin.jar" />
