--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -7,12 +7,14 @@ bin.includes = META-INF/,\
                .,\
                splash.bmp,\
                plugin_customization.ini,\
-               lib/,\
                .options,\
                about.mappings,\
                lib/DynamicJasper-3.0.14.jar,\
                lib/jdt-compiler-3.1.1.jar,\
-               lib/mail.jar,\
                lib/SuperCSV-1.52.jar,\
-               lib/spiffy-all-0.05.jar
+               lib/spiffy-all-0.05.jar,\
+               lib/activation.jar,\
+               lib/gnumail.jar,\
+               lib/inetlib.jar,\
+               lib/gnumail-providers.jar
 Bundle-NativeCode: scanlib.dll
