checking over reports

--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -46,9 +46,9 @@ NewPsByStudyClinic.EDITOR = PsByStudyClinicDateEditor
 PatientVisitSummary.NAME = Patient Visit Statistics by Study and Clinic
 PatientVisitSummary.DESCRIPTION=Displays the total number of patients for each of 1-5+ visits, the total number of visits, and the total number of patients per study per clinic for a given date range.
 PatientVisitSummary.EDITOR=PatientVisitSummaryEditor
-PatientWBC.NAME = Patient WBC Aliquots
-PatientWBC.DESCRIPTION=Displays a list of the WBC aliquots located in Cabinets taken from a patient. Note: the full name of the sample type must contain 'DNA', and the top container's name must contain 'Cabinet'.
-PatientWBC.EDITOR=PatientWBCEditor
+#PatientWBC.NAME = Patient WBC Aliquots
+#PatientWBC.DESCRIPTION=Displays a list of the WBC aliquots located in Cabinets taken from a patient. Note: the short name of the sample type must be 'DNA(Blood)', and the top container's name must contain 'Cabinet'.
+#PatientWBC.EDITOR=PatientWBCEditor
 PsByStudy.NAME = Patients per Study by Date
 PsByStudy.DESCRIPTION=Displays the total number of patients per study with at least one patient visit grouped by date processed in a calendar week/month/quarter/year.
 PsByStudy.EDITOR = PsByStudyDateEditor
