resolves #778: top container widget greys out until user enters valid input (this applies to AliquotsByPallet, and ContainerEmptyLocations)

--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -23,7 +23,7 @@ ContainerCapacity.NAME = Container Capacity
 ContainerCapacity.DESCRIPTION = Displays the total aliquot capacity for each container and the total currently in use
 ContainerCapacity.EDITOR = ContainerCapacityEditor
 ContainerEmptyLocations.NAME = Available Locations by Container
-ContainerEmptyLocations.DESCRIPTION = Lists the available aliquot positions of a given container.
+ContainerEmptyLocations.DESCRIPTION = Lists the available aliquot positions of a given parent container. Note: Child containers must be initialized
 ContainerEmptyLocations.EDITOR = ContainerEmptyLocationsEditor
 DAliquots.NAME = Aliquots per Study per Clinic by Date
 DAliquots.DESCRIPTION=Displays the total number of aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year for a given top-level container type.
