resolves #743: user group and privileges are retrieved. Only the site object needs a database access as it needs a specific behaviour

--- a/build.xml
+++ b/build.xml
@@ -500,8 +500,7 @@
         <include name="${clm.object.state.logger.config}" />
       </classes>
       <classes dir="${eclipse.proj.dir.common}/output" >
-        <include name="**/common/**"/>
-        <include name="**/server/**"/>
+        <exclude name="**/client/**"/>
       </classes>
       <webinf dir="${cacore.sdk.dir}\${output.src.dir}">
         <include name="server-config.wsdd" />
