--- a/eclipse_ws/biobank.common/.classpath
+++ b/eclipse_ws/biobank.common/.classpath
@@ -26,7 +26,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/client/sdk-grid-remoting.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/client/sdk-security.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/client/sdk-writable-client-framework.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/client/spring.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/client/spring.jar" sourcepath="/home/delphine/projects/sources/spring-framework/2.0.3/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/client/xercesImpl.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/client/xpp3-1.1.3.4.C.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/client/xstream-1.3.1.jar"/>
