--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -647,7 +647,7 @@
                         ifEmpty="false"
                         operator="or">
                      <instanceof
-                           value="edu.ualberta.med.biobank.treeview.ClinicShipmentAdapter">
+                           value="edu.ualberta.med.biobank.treeview.clinicShipment.ClinicShipmentAdapter">
                      </instanceof>
                   </iterate>
                </with>
@@ -697,7 +697,7 @@
                         ifEmpty="false"
                         operator="or">
                      <instanceof
-                           value="edu.ualberta.med.biobank.treeview.PatientAdapter">
+                           value="edu.ualberta.med.biobank.treeview.patient.PatientAdapter">
                      </instanceof>
                   </iterate>
           	  </with>
@@ -728,7 +728,7 @@
                         ifEmpty="false"
                         operator="or">
                      <instanceof
-                           value="edu.ualberta.med.biobank.treeview.PatientAdapter">
+                           value="edu.ualberta.med.biobank.treeview.patient.PatientAdapter">
                      </instanceof>
                   </iterate>
           	  </with>
@@ -778,7 +778,7 @@
                         ifEmpty="false"
                         operator="or">
                      <instanceof
-                           value="edu.ualberta.med.biobank.treeview.PatientAdapter">
+                           value="edu.ualberta.med.biobank.treeview.patient.PatientAdapter">
                      </instanceof>
                   </iterate>
           	  </with>
@@ -809,7 +809,7 @@
                         ifEmpty="false"
                         operator="or">
                      <instanceof
-                           value="edu.ualberta.med.biobank.treeview.PatientVisitAdapter">
+                           value="edu.ualberta.med.biobank.treeview.patient.PatientVisitAdapter">
                      </instanceof>
                   </iterate>
           	  </with>
