AliquotsByPallet has had it's corresponding GUI named changed to be more descriptive

--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -10,8 +10,8 @@ AliquotInvoiceByPatient.EDITOR=AliquotInvoiceByPatientEditor
 AliquotRequest.NAME = Aliquot Request by CSV file
 AliquotRequest.DESCRIPTION=Given a CSV file detailing a request (Patient Number, Date Drawn, Sample Type, # Requested), generate a list of aliquot locations.
 AliquotRequest.EDITOR=AliquotRequestEditor
-AliquotsByPallet.NAME = Aliquots By Pallet
-AliquotsByPallet.DESCRIPTION = Lists all aliquots in a given pallet.
+AliquotsByPallet.NAME = Aliquots By Container
+AliquotsByPallet.DESCRIPTION = Lists all aliquots located in a given bottom-level container.
 AliquotsByPallet.EDITOR = AliquotsByPalletEditor
 AliquotSCount.NAME= Sample Types by Study
 AliquotSCount.DESCRIPTION=Lists the total number of each aliquot sample type by study.
