using new scanning dll

--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                lib/,\
                bin/,\
-               conf/
+               conf/,\
+               .
 source.. = src/,\
            conf/
 jars.compile.order = .
