--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1010,6 +1010,9 @@
                <reference
                      definitionId="biobank2.loggedIn">
                </reference>
+                <reference
+                     definitionId="biobank2.siteSelected">
+               </reference>
             </and>
          </enabledWhen>
       </handler>
