--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/reports/reports.properties
@@ -17,7 +17,7 @@ AliquotSCount.NAME= Sample Types by Study
 AliquotSCount.DESCRIPTION=Lists the total number of each aliquot sample type by study.
 AliquotSCount.EDITOR = AliquotSCountEditor
 CAliquots.NAME = Aliquots per Study per Clinic
-CAliquots.DESCRIPTION = Displays the total number of aliquots per study per clinic for a given top-level container type.
+CAliquots.DESCRIPTION = Displays the total number of aliquots per study per clinic for given top-level containers.
 CAliquots.EDITOR= AliquotsByStudyClinicEditor
 ContainerCapacity.NAME = Container Capacity
 ContainerCapacity.DESCRIPTION = Displays the total aliquot capacity for each container and the total currently in use
@@ -26,7 +26,7 @@ ContainerEmptyLocations.NAME = Available Locations by Container
 ContainerEmptyLocations.DESCRIPTION = Lists the available aliquot positions of a given parent container. Note: Child containers must be initialized
 ContainerEmptyLocations.EDITOR = ContainerEmptyLocationsEditor
 DAliquots.NAME = Aliquots per Study per Clinic by Date
-DAliquots.DESCRIPTION=Displays the total number of aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year for a given top-level container type.
+DAliquots.DESCRIPTION=Displays the total number of aliquots per study per clinic grouped by link date in a calendar week/month/quarter/year for given top-level containers.
 DAliquots.EDITOR = AliquotsByStudyClinicDateEditor
 FTAReport.NAME = FTA Aliquots by First Visit
 FTAReport.DESCRIPTION = Retrieves one FTA card for a patient with their first patient visit after the specified date, for a given study. 
@@ -59,7 +59,7 @@ QAAliquots.NAME = Aliquot QA
 QAAliquots.DESCRIPTION =Retrieves a list of aliquots, at random, within a date range by sample type for a given set of top-level containers.  Note: the number of aliquots must be specified.
 QAAliquots.EDITOR = QAAliquotsEditor
 SAliquots.NAME =Aliquots per Study
-SAliquots.DESCRIPTION=Displays the total number of aliquots per study for a given top-level container type.
+SAliquots.DESCRIPTION=Displays the total number of aliquots per study for given top-level containers.
 SAliquots.EDITOR = AliquotsByStudyEditor
 SampleTypePvCount.NAME = Sample Type Totals by Patient Visit and Study
 SampleTypePvCount.DESCRIPTION=Lists the total number of each sample type per patient visit for a specified study.
