--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -13,8 +13,6 @@ bin.includes = META-INF/,\
                lib/jdt-compiler-3.1.1.jar,\
                lib/SuperCSV-1.52.jar,\
                lib/spiffy-all-0.05.jar,\
-               lib/activation.jar,\
-               lib/gnumail.jar,\
-               lib/inetlib.jar,\
-               lib/gnumail-providers.jar
+               lib/mailapi.jar,\
+               lib/smtp.jar
 Bundle-NativeCode: scanlib.dll
